Get-Task/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: get-task
spec:
  selector:
    app: get-task
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
