Get-Task/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: get-task-ingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: gettask.puneetdevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-task
            port: 
              number: 8000
